--- a/TODO.txt
+++ b/TODO.txt
@@ -90,4 +90,706 @@ diameter of a tree
 The Knight’s tour problem | Backtracking-1
 
 
-Data Structure and Algorithm,C,C++,Java,Python,ASP.Net,Android Development,Unity3D
+========================================================================================================
+GeeksforGeeks - Must Do Coding Questions for Companies like Amazon, Microsoft, Adobe, …
+
+----------------------------
+Arrays :
+----------------------------
+
+Subarray with given sum
+Count the triplets
+Kadane’s Algorithm
+Missing number in array
+Merge two sorted arrays
+Rearrange array alternatively
+Number of pairs
+Inversion of Array
+Sort an array of 0s, 1s and 2s
+Equilibrium point
+Leaders in an array
+Minimum Platforms
+Reverse array in groups
+K’th smallest element
+Trapping Rain Water
+Pythagorean Triplet
+Chocolate Distribution Problem
+Stock buy and sell
+Element with left side smaller and right side greater
+Convert array into Zig-Zag fashion
+Last Index of 1
+Spirally traversing a matrix
+Largest Number formed from an Array
+
+
+----------------------------
+String :
+----------------------------
+
+Reverse words in a given string
+Permutations of a given string
+Longest Palindrome in a String
+Recursively remove all adjacent duplicates
+Check if string is rotated by two places
+Roman Number to Integer
+Anagram
+Remove Duplicates
+Form a Palindrome
+Longest Distinct Characters in the string
+Implement Atoi
+Implement strstr
+Longest Common Prefix
+Solved the above? Go for some more Questions
+
+----------------------------
+Linked List :
+----------------------------
+
+Finding middle element in a linked list
+Reverse a linked list
+Rotate a Linked List
+Reverse a Linked List in groups of given size
+Intersection point in Y shaped linked lists
+Detect Loop in linked list
+Remove loop in Linked List
+n’th node from end of linked list
+Flattening a Linked List
+Merge two sorted linked lists
+Intersection point of two Linked Lists
+Pairwise swap of a linked list
+Add two numbers represented by linked lists
+Check if Linked List is Palindrome
+Implement Queue using Linked List
+Implement Stack using Linked List
+Given a linked list of 0s, 1s and 2s, sort it
+Delete without head pointer
+
+----------------------------
+Stack and Queue :
+----------------------------
+
+Parenthesis Checker
+Next larger element
+Queue using two Stacks
+Stack using two queues
+Get minimum element from stack
+LRU Cache
+Circular tour
+First non-repeating character in a stream
+Rotten Oranges
+Maximum of all subarrays of size k
+
+----------------------------
+Tree :
+----------------------------
+
+Print Left View of Binary Tree
+Check for BST
+Print Bottom View of Binary Tree
+Print a Binary Tree in Vertical Order
+Level order traversal in spiral form
+Connect Nodes at Same Level
+Lowest Common Ancestor in a BST
+Convert a given Binary Tree to Doubly Linked List
+Write Code to Determine if Two Trees are Identical or Not
+Given a binary tree, check whether it is a mirror of itself
+Height of Binary Tree
+Maximum Path Sum
+Diameter of a Binary Tree
+Number of leaf nodes
+Check if given Binary Tree is Height Balanced or Not
+Serialize and Deserialize a Binary Tree
+Solved the above? Go for some more Questions
+
+----------------------------
+Heap :
+----------------------------
+
+Find median in a stream
+Heap Sort
+Operations on Binary Min Heap
+Rearrange characters
+Kth largest element in a stream
+Merge K sorted linked lists
+Kth largest element in a stream
+
+----------------------------
+Recursion :
+----------------------------
+
+Flood fill Algorithm
+Number of paths
+Combination Sum – Part 2
+Special Keyboard
+Josephus problem
+
+----------------------------
+Hashing :
+----------------------------
+
+Relative Sorting
+Sorting Elements of an Array by Frequency
+Largest subarray with 0 sum
+Common elements
+Find all four sum numbers
+Swapping pairs make sum equal
+Count distinct elements in every window
+Array Pair Sum Divisibility Problem
+Longest consecutive subsequence
+Array Subset of another array
+Find all pairs with a given sum
+Find first repeated character
+Zero Sum Subarrays
+Minimum indexed character
+Check if two arrays are equal or not
+Uncommon characters
+Smallest window in a string containing all the characters of another string
+First element to occur k times
+Check if frequencies can be equal
+
+----------------------------
+Graph :
+----------------------------
+
+Depth First Traversal
+Breadth First Traversal
+Detect cycle in undirected graph
+Detect cycle in a directed graph
+Topological sort
+Find the number of islands
+Implementing Dijkstra
+Minimum Swaps
+Strongly Connected Components
+Shortest Source to Destination Path
+Find whether path exist
+Minimum Cost Path
+Circle of Strings
+Floyd Warshall
+Alien Dictionary
+Snake and Ladder Problem
+
+----------------------------
+Greedy :
+----------------------------
+
+Activity Selection
+N meetings in one room
+Coin Piles
+Maximize Toys
+Page Faults in LRU
+Largest number possible
+Minimize the heights
+Minimize the sum of product
+Huffman Decoding
+Minimum Spanning Tree
+Shop in Candy Store
+Geek collects the balls
+
+----------------------------
+Dynamic Programming :
+----------------------------
+
+Minimum Operations
+Max length chain
+Minimum number of Coins
+Longest Common Substring
+Longest Increasing Subsequence
+Longest Common Subsequence
+0 – 1 Knapsack Problem
+Maximum sum increasing subsequence
+Minimum number of jumps
+Edit Distance
+Coin Change Problem
+Subset Sum Problem
+Box Stacking
+Rod Cutting
+Path in Matrix
+Minimum sum partition
+Count number of ways to cover a distance
+Egg Dropping Puzzle
+Optimal Strategy for a Game
+Shortest Common Supersequence
+
+----------------------------
+Divide and Conquer :
+----------------------------
+
+Find the element that appears once in sorted array
+Search in a Rotated Array
+Binary Search
+Sum of Middle Elements of two sorted arrays
+Quick Sort
+Merge Sort
+K-th element of two sorted Arrays
+
+----------------------------
+Backtracking :
+----------------------------
+
+N-Queen Problem
+Solve the Sudoku
+Rat in a Maze Problem
+Word Boggle
+Generate IP Addresses
+
+----------------------------
+Bit Magic :
+----------------------------
+
+Find first set bit
+Rightmost different bit
+Check whether K-th bit is set or not
+Toggle bits given range
+Set kth bit
+Power of 2
+Bit Difference
+Rotate Bits
+Swap all odd and even bits
+Count total set bits
+Longest Consecutive 1’s
+Sparse Number
+Alone in a couple
+Maximum subset XOR
+
+----------------------------
+Some More Questions on Arrays :
+----------------------------
+
+Find Missing And Repeating
+Maximum Index
+Consecutive 1’s not allowed
+Majority Element
+Two numbers with sum closest to zero
+Nuts and Bolts Problem
+Boolean Matrix Problem
+Smallest Positive missing number
+Jumping Caterpillars
+
+----------------------------
+Some More Questions on Strings :
+----------------------------
+
+Most frequent word in an array of strings
+CamelCase Pattern Matching
+String Ignorance
+Smallest window in a string containing all the characters of another string
+Design a tiny URL or URL shortener
+Permutations of a given string
+Non Repeating Character
+Check if strings are rotations of each other or not
+Save Ironman
+Repeated Character
+Remove common characters and concatenate
+Geek and its Colored Strings
+Second most repeated string in a sequence
+
+----------------------------
+Some more Questions on Trees :
+----------------------------
+
+Mirror Tree
+Longest consecutive sequence in Binary tree
+Bottom View of Binary Tree
+Lowest Common Ancestor in a Binary Tree
+Binary to DLL
+
+
+
+
+
+
+========================================================================================================
+GeeksforGeeks - Must Do Coding Questions for Product Based Companies
+
+----------------------------
+Math
+----------------------------
+
+Easy
+    Missing Number in Array
+    Trailing Zeros in Factorial
+Medium
+    A Simple Fraction
+Hard
+    Nth Natural Number
+    Smallest Positive Integer that can not be represented as Sum
+
+----------------------------
+Arrays
+----------------------------
+
+Easy
+    Rotate Array
+    Majority Element
+    Plus one
+    Array of alternative +ve and -ve no.s
+    Product Array puzzle
+    Frequencies of Limited Range Array Elements
+    Large Factorial
+Medium
+    Jump Game
+    Maximum number of 1’s
+    Stock Buy and Sell
+    Longest Consecutive Subsequence
+    Maximum value of difference of a pair of elements and their Index
+    Maximum index
+    K-th element of two sorted Arrays
+    Trapping Rain Water
+    3 sum closest
+Hard 
+    Maximum circular Subarray Sum
+    Merge without Extra Space
+
+----------------------------
+Searching
+----------------------------
+
+Easy
+    Search insert position of K in a sorted array
+    Collecting Wood
+    Left most and right most index
+    Bitonic Point 
+Medium
+    Search an element in sorted and rotated array
+    Square root of a number
+    Find missing in second array
+Hard
+    Painter’s Partition Problem
+    Median of 2 sorted arrays of Different sizes
+    Allocate minimum number of pages
+
+----------------------------
+Sorting
+----------------------------
+
+Easy
+    Wave array
+Medium
+    Count the number of possible triangles
+    Triplets with sum with given range
+    Count Inversions
+    Relative Sorting
+    Minimum Platforms
+    Maximum Index
+
+----------------------------    
+Matrix
+----------------------------
+
+Easy 
+    Sort  a 2D vector diagonally
+Medium
+    Spiral Matrix
+    Boolean matrix
+    Rotate matrix by 90 degrees
+    Search in a row-column sorted Matrix
+    Row with maximum 1s
+
+----------------------------
+String
+----------------------------
+
+Easy 
+    Reverse words in a given string
+    Longest Common Prefix
+    Roman Number to Integer
+Medium
+    Next higher palindrome number using the same set of digits
+    Length of longest prefix suffix
+    Smallest window in string containing all characters
+    Validate an IP address
+    Implement Atoi
+    Look and say Pattern
+    Longest K unique characters substring
+
+----------------------------
+Hashing
+----------------------------
+
+Easy 
+    Key Pair
+    Top K Frequent Elements in Array
+    Intersection of two arrays
+    Array Pair Sum Divisibility Problem
+Medium
+    Triplet Sum in Array
+    Length of the longest substring
+    Is Sudoku Valid
+    Print Anagrams Together 
+    Subarrays with sum K
+    Longest subarray with sum divisible by K
+
+----------------------------
+Bit Masking
+----------------------------
+
+Easy 
+    Reverse bits
+    Number of set bits
+    Sum of two integers
+    Check whether K-th bit is set or not
+    Longest Consecutive 1’s
+Medium 
+    Find the element that appears once
+    Gray code
+    Maximum AND
+Hard 
+    Maximum subset XOR
+    Bit Difference
+
+----------------------------
+Linked List
+----------------------------
+
+Easy
+    Merge Two Sorted Linked Lists
+    Reverse a Linked List
+    Delete a Node without Head Pointer
+    Add two Numbers represented by linked lists
+    Finding middle element in a linked list
+    Check if linked list is palindrome
+Medium
+    Rearrange a linked list
+    Detect and Remove a loop In Linked List
+    Merge Sort for Linked List
+    Intersection of Linked List
+    Rotate Linked List by K places
+    Flattening a Linked List
+    Reverse a linked list in groups of given size
+    Partition a linked list around a given value
+Hard
+    Clone a linked list with next and random pointers
+
+----------------------------
+Stack
+----------------------------
+
+Easy
+    Parenthesis Checker
+    Infix to Postfix
+    Restrictive Candy Crush
+Medium
+    Next Larger Element 
+    Stock span problem
+    The Celebrity Problem
+    Maximum Rectangular Area in a Histogram 
+Hard
+    Longest Valid Parentheses
+    Maximum of minimum for every window size
+    Remove K digits
+    132 Geeky Buildings
+
+----------------------------
+Queue
+----------------------------
+
+Medium
+    Maximum of all subarrays of size K
+    Circular tour (Sliding Window)
+
+----------------------------
+Heap
+----------------------------
+
+Easy
+    Rearrange Characters
+    Minimum Cost of ropes
+Medium
+    Kth largest element of stream
+    Merge k sorted arrays
+Hard
+    Median of stream
+
+----------------------------
+Binary Tree
+----------------------------
+
+Easy
+    Symmetric Tree
+    Zigzag Tree Traversal
+    Checked for Balanced tree
+    Height of Binary Tree
+    Diameter of Binary tree
+    Determine if two trees are identical
+    Minimum depth of binary tree
+Medium
+    Check if subtree
+    Inorder Traversal (iterative)
+    Preorder Traversal (iterative)
+    Postorder Traversal(iterative)
+    Vertical Traversal of a Binary Tree
+    Construct Binary Tree from Preorder and Inorder Traversal
+    Connect nodes at same level
+    Lowest Common Ancestor of a Binary Tree
+    Boundary Traversal
+    Sum tree
+Hard
+    Binary Tree to Doubly Linked List
+    Maximum sum path between two leaf nodes
+    Burning Tree
+
+----------------------------
+Binary Search Tree
+----------------------------
+
+Easy
+    Check for BST
+    Array to BST
+    Inorder Successor in BST
+    Kth Largest Element in a BST
+Medium
+    Remove BST keys outside the given range
+    Pair with given target in BST
+    Unique BSTs
+    Preorder Traversal and BST
+Hard
+    Merge two BST’s
+    Fixing two nodes of a BST
+
+----------------------------
+Graph
+----------------------------
+
+Medium
+    Number of Islands
+    COVID Spread
+    Prerequisite tasks
+    Strongly Connected Component
+    Minimum swaps to sort
+    Shortest path
+    Circle of Strings
+    Snake and Ladder Problem 
+    Detect cycle in an undirected graph
+    Detect cycle in a directed graph
+    Check for Bipartite graph
+    Unit Area of Largest region of 1s
+Hard
+    Alien Dictionary
+    Word Ladder
+
+----------------------------
+Trie
+----------------------------
+    
+Medium
+    Minimum XOR value pair
+    Word Boggle – II
+    Most frequent word in an array of strings
+    Minimum XOR value pair
+
+----------------------------
+Greedy
+----------------------------
+
+Medium
+    N meetings in one room
+    Coin Piles
+    Maximize Toys
+    Largest number with given sum
+    Minimize the heights
+    Fractional Knapsack
+    Job Sequencing
+    Police and Thieves
+    Water the Plants
+
+----------------------------
+DP
+----------------------------
+
+Easy 
+    Count ways to reach the n’th stair
+    Get Minimum Squares
+    Nth Fibonacci Number
+Medium
+    0 – 1 Knapsack Problem
+    Number of Coins
+    Edit distance
+    Maximize The Cut Segments
+    Box Stacking
+    Longest Increasing Subsequence
+    Longest Palindromic Substring
+    Longest Common Substring
+    Longest Common Subsequence
+    Wildcard Pattern Matching
+    Total Decoding Messages
+    Max length chain
+    Maximum sum increasing subsequence
+    Minimum number of jumps
+    Subset Sum Problem
+    Maximum path sum in matrix
+    Player with max score
+    Shortest Common Supersequence
+    Palindrome Partitioning
+    Form a Palindrome
+Hard
+    Boolean Parenthesization
+    Matrix Chain
+    Maximum Profit
+    Minimum Cost Path
+    Partition Equal Subset Sum
+
+----------------------------
+Recursion
+----------------------------
+
+Easy
+    Number of Paths
+    Pascals Triangle
+    Josephus problem
+    Tower of Hanoi
+Medium
+    Special Keyboard
+    Flood Fill Algorithm
+
+----------------------------
+Backtracking
+----------------------------
+
+Easy
+    Permutations    
+Medium
+    Letter Combinations of a Phone Number
+    Generate Parentheses
+    Word Boggle – 1
+    Rat in a Maze Problem
+    Largest number in K swaps
+    Combination Sum
+Hard
+    Palindrome Partitioning
+    N-Queen Problem
+    Solve the Sudoku
+
+----------------------------
+Algorithms
+----------------------------
+
+Easy
+    Bubble Sort
+    Insertion Sort
+    Selection Sort
+Medium
+    Merge Sort
+    Quick Sort
+    Heap Sort
+    Count Sort
+    Kadane Algorithm
+    Minimum Spanning Tree
+    Implementing Dijkstra Algorithm
+    Floyd Warshall
+    Bellman Ford Algorithm
+    Rabin-Karp Algorithm
+    KMP algorithm
+    Z Algorithm
+    Huffman Encoding
+
+----------------------------
+Design
+----------------------------
+Easy
+    Stack using two queues
+    Queue using stack
+Medium
+    Ternary Search
+    Binary Heap Operations
+    LRU cache
+    Trie | (Insert and Search)
